--- a/views/_partial/MathJax.ejs
+++ b/views/_partial/MathJax.ejs
@@ -26,5 +26,5 @@
     });
 </script>
 
-<script type="text/javascript" src="/javascripts/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+<script type="text/javascript" src="<%= site.url_for('javascripts/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML') %>">
 </script>
