--- a/views/_partial/_problem/domain.ejs
+++ b/views/_partial/_problem/domain.ejs
@@ -21,15 +21,13 @@
 	<div class="pure-u-1-1 custom-domain">
 		<div class="custom-border">
             <div>
-                <h1 class="text-box-head"><a href="/problems/domain/0">The C Programming</a></h1>
-                <div id="tag-C"></div>
+                <h1 class="text-box-head"><a href="<%= site.url_for('problems/domain/0') %>">The C Programming</a></h1>
             </div>
         </div>
 
         <div class="custom-border">
             <div>
-                <h1 class="text-box-head"><a href="/problems/domain/1">Parallel Programming</a></h1>
-                <div id="tagPP"></div>
+                <h1 class="text-box-head"><a href="<%= site.url_for('problems/domain/1') %>">Parallel Programming</a></h1>
             </div>
         </div>
 	</div>
