--- a/views/_partial/_problem/problem.ejs
+++ b/views/_partial/_problem/problem.ejs
@@ -7,7 +7,8 @@
     	judge_compiler_arg = site.JUDGE.compiler_arg;
 	var unitConvert = site.unitConvert;
 %>
-<link rel="stylesheet" type="text/css" href="/stylesheets/shThemeDefault.css" />
+<link rel="stylesheet" type="text/css" href="<%= site.url_for('stylesheets/shThemeDefault.css') %>" />
+
 <div class="header">
 	<h1 class='article-title'><%- pid + ". " + ttl %></h1>
     <h2>I'm a slow walker, but I never walk backwards. </h2>
@@ -18,14 +19,14 @@
 
 <ul class="pure-menu-list">
 <% if (user["uid"]) { %>
-	<li class="pure-menu-item"><a class="pure-menu-link" href='/submissions?pid=<%- pid %>&uid=<%- uid %>'><%= __('My Status') %></a></li>
+	<li class="pure-menu-item"><a class="pure-menu-link" href='<%= site.url_for('submissions?pid=' + pid + '&uid='+ uid) %>'><%= __('My Status') %></a></li>
 <% } %>
-	<li class="pure-menu-item"><a class="pure-menu-link" href='/submissions?pid=<%- pid %>'><%= __('Status') %></a></li>
-	<li class="pure-menu-item"><a class="pure-menu-link" href='/statistic/problem/<%- cid %>/<%- pid %>'><%= __('Statistics') %></a></li>
-	<li class="pure-menu-item"><a class="pure-menu-link" href='/solution/problem/<%- pid %>'><%= __('Solution') %></a></li>
+	<li class="pure-menu-item"><a class="pure-menu-link" href='<%= site.url_for('submissions?pid=' + pid) %>'><%= __('Status') %></a></li> 
+	<li class="pure-menu-item"><a class="pure-menu-link" href='<%= site.url_for('statistic/problem/' + cid + '/' + pid) %>'><%= __('Statistics') %></a></li>
+	<li class="pure-menu-item"><a class="pure-menu-link" href='<%= site.url_for('solution/problem/' + pid) %>'><%= __('Solution') %></a></li>
 <% if (user["uid"] >= 0 && user["class"] == null) { %>
-	<li class="pure-menu-item"><a class="pure-menu-link" href='/statistic/grade/problem/<%- cid %>/<%- pid %>'><%= __('Report') %></a></li>
-	<li class="pure-menu-item"><a class="pure-menu-link" href='/admin/edit/problem/<%- pid %>'><%= __('Edit') %></a></li>
+	<li class="pure-menu-item"><a class="pure-menu-link" href='<%= site.url_for('statistic/grade/problem/' + cid + '/' + pid) %>'><%= __('Report') %></a></li>
+	<li class="pure-menu-item"><a class="pure-menu-link" href='<%= site.url_for('admin/edit/problem/' + pid) %>'><%= __('Edit') %></a></li>
 <% } %>
 </ul>
 
@@ -37,7 +38,7 @@
 	<div class="pure-u-1 pure-u-lg-2-3">
 	<h2 class="content-subhead">Submit</h2>
 <% if( canSubmit ) { %>
-	<form class="pure-form  pure-form-aligned" action="/submit" method="post" enctype="multipart/form-data" id="submit_form">
+	<form class="pure-form  pure-form-aligned" action="<%= site.url_for('submit') %>" method="post" enctype="multipart/form-data" id="submit_form">
 		<fieldset>
 		<input name="cid" type="hidden" value="<%- cid %>">
 		<input name="pid" type="hidden" value="<%- pid %>">
@@ -77,7 +78,7 @@
 	});
 	</script>	
 <% } else { %>
-	<a class="button-success pure-button" href="/login"><i class="fa fa-sign-in"></i> <%= __('Login') %></a>
+	<a class="button-success pure-button" href="<%= site.url_for('login') %>"><i class="fa fa-sign-in"></i> <%= __('Login') %></a>
 <% } %>
 	</div>
 	<div class="pure-u-1 pure-u-lg-1-3">
@@ -102,7 +103,7 @@
 
 </div>
 
-<script src="/javascripts/clipboard/clipboard.min.js"></script>
+<script src="<%= site.url_for('javascripts/clipboard/clipboard.min.js') %>"></script>
 
 <script>
 new Clipboard(".fw-code-copy-button", {
