--- a/views/_partial/_user/edit.ejs
+++ b/views/_partial/_user/edit.ejs
@@ -8,7 +8,7 @@
 <h2><div class='sysmsg'><%- sysmsg %></div></h2>
 <% } %>
 
-<form action="edit" method="post" class="pure-form  pure-form-aligned">
+<form action="<%= site.url_for('edit') %>" method="post" class="pure-form  pure-form-aligned">
     <fieldset>
         <legend>Profile</legend>
 
@@ -38,12 +38,12 @@
     </fieldset>
 </form>
 
-<form action="/user/upload/avatar" method="post" class="pure-form pure-form-stacked" enctype="multipart/form-data">
+<form action="<%= site.url_for('user/upload/avatar') %>" method="post" class="pure-form pure-form-stacked" enctype="multipart/form-data">
     <fieldset>
         <legend>Avatar</legend>
 		<div class="pure-g">
             <div class="pure-u-1 pure-u-md-11-24">
-				<img class="pure-u-1-1" src="/images/avatar/thumb--<%= user['uid'] %>" onerror="this.src='http://i.imgur.com/mV053DI.png'"/>
+				<img class="pure-u-1-1" src="<%= site.url_for('images/avatar/thumb--' + user['uid']) %>" onerror="this.src='http://i.imgur.com/mV053DI.png'"/>
 			</div>
 			<div class="pure-u-1 pure-u-md-1-24">
 			</div>
