--- a/views/_partial/_user/user.ejs
+++ b/views/_partial/_user/user.ejs
@@ -7,7 +7,7 @@
 <div class="pure-g">
 	<div class="pure-u-1 pure-u-lg-8-24">
 		<div class="pure-u-1-1">
-			<img class="pure-u-1-1" src="/images/avatar/thumb--<%= userinfo.info.uid %>" onerror="this.src='http://i.imgur.com/mV053DI.png'"/>
+			<img class="pure-u-1-1" src="<%= site.url_for('images/avatar/thumb--' + userinfo.info.uid) %>" onerror="this.src='http://i.imgur.com/mV053DI.png'"/>
 		</div>
 		<div class="pure-u-1-1">
 			<div class="header">				
@@ -94,19 +94,19 @@
 
 		<div class="pure-u-1-1">
 	<!-- Live2D Library -->
-    <script src="/javascripts/live2d/live2d.min.js"></script>
+    <script src="<%= site.url_for('javascripts/live2d/live2d.min.js') %>"></script>
     
     <!-- Live2D Framework -->
-    <script src="/javascripts/live2d/Live2DFramework.js"></script>
+    <script src="<%= site.url_for('javascripts/live2d/Live2DFramework.js') %>"></script>
     
     <!-- User's Script -->
-    <script src="/javascripts/live2d/src/utils/MatrixStack.js"></script>
-    <script src="/javascripts/live2d/src/utils/ModelSettingJson.js"></script>
-    <script src="/javascripts/live2d/src/PlatformManager.js"></script>
-    <script src="/javascripts/live2d/src/LAppDefine.js"></script>
-    <script src="/javascripts/live2d/src/LAppModel.js"></script>
-    <script src="/javascripts/live2d/src/LAppLive2DManager.js"></script>
-    <script src="/javascripts/live2d/src/SampleApp1.js"></script>
+    <script src="<%= site.url_for('javascripts/live2d/src/utils/MatrixStack.js') %>"></script>
+    <script src="<%= site.url_for('javascripts/live2d/src/utils/ModelSettingJson.js') %>"></script>
+    <script src="<%= site.url_for('javascripts/live2d/src/PlatformManager.js') %>"></script>
+    <script src="<%= site.url_for('javascripts/live2d/src/LAppDefine.js') %>"></script>
+    <script src="<%= site.url_for('javascripts/live2d/src/LAppModel.js') %>"></script>
+    <script src="<%= site.url_for('javascripts/live2d/src/LAppLive2DManager.js') %>"></script>
+    <script src="<%= site.url_for('javascripts/live2d/src/SampleApp1.js') %>"></script>
     <!--
     <p>
         <button id="btnChange" class="active">Change Model</button>
