--- a/views/_partial/_widget/submission_table.ejs
+++ b/views/_partial/_widget/submission_table.ejs
@@ -43,8 +43,8 @@
 			<tr class='<%= submit_owner ? "pure-table-submitowner" : "" %>'>
 				<td class='sid'><%- sl[i].sid %></td>
 				<td><%- sl[i].pid %></td>
-				<td class='problem-title'><a href='/problem/<%- sl[i].cid %>/<%- sl[i].pid %>'><%- sl[i].ttl %></a></td>
-				<td><a href='/user/<%- sl[i].uid %>'><%- sl[i].lgn %></td>
+				<td class='problem-title'><a href='<%= site.url_for('problem/' + sl[i].cid + '/' + sl[i].pid) %>'><%- sl[i].ttl %></a></td>
+				<td><a href='<%= site.url_for('user/' + sl[i].uid) %>'><%- sl[i].lgn %></td>
 				<% 
 					var text = '';
 					var judge_res = site.JUDGE.result_message,
@@ -66,16 +66,16 @@
 					if (sl[i].res == 0 || sl[i].res == 8)
 						text += ' <i class="fa fa-spinner fa-pulse"></i>';
 					if (user.uid && (user.uid == sl[i].uid || user["class"] === null)) {
-						text += ' <a class="pid-rejudge" href="/admin/api/rejudge?pid=' + sl[i].pid + '&sid=' + sl[i].sid + '" style="color: #b6c17b;" title="rejudge"><i class="fa fa-refresh"></i></a>';
+						text += ' <a class="pid-rejudge" href="' + site.url_for('/admin/api/rejudge?pid=') + sl[i].pid + '&sid=' + sl[i].sid + '" style="color: #b6c17b;" title="rejudge"><i class="fa fa-refresh"></i></a>';
 					}
 					text += '</td>';
 				%>
 				<%- text %>
 				<td>
 					<% if (user.uid && (user.uid == sl[i].uid || user["class"] === null)) { %>
-					<a href='/source/highlight/<%- sl[i].sid %>'><%- judge_lng[sl[i].lng] %> <i class="fa fa-unlock-alt"></i></a>
+					<a href='<%= site.url_for('source/highlight/' + sl[i].sid) %>'><%- judge_lng[sl[i].lng] %> <i class="fa fa-unlock-alt"></i></a>
 					<% } else if (typeof(ac_map) != 'undefined' && ac_map[sl[i].pid] != undefined) { %>
-					<a href='/source/highlight/<%- sl[i].sid %>'><%- judge_lng[sl[i].lng] %> <i class="fa fa-unlock-alt"></i></a>
+					<a href='<%= site.url_for('source/highlight/' + sl[i].sid) %>'><%- judge_lng[sl[i].lng] %> <i class="fa fa-unlock-alt"></i></a>
 					<% } else { %>
 					<%- judge_lng[sl[i].lng] %>
 					<% } %>
