--- a/views/admin/_partial/account.ejs
+++ b/views/admin/_partial/account.ejs
@@ -18,7 +18,7 @@
 	<%- include('../_partial/widget/nav')%>
 	<div class="pure-g">
 		<div class="pure-u-1-3">
-			<a class="pure-button pure-button-primary" class="pure-u-1-1" href="/admin/new/account">+ <%= __('New Account') %></a>
+			<a class="pure-button pure-button-primary" class="pure-u-1-1" href="<%= site.url_for('admin/new/account') %>">+ <%= __('New Account') %></a>
 		</div>
 	</div>
 
@@ -40,7 +40,7 @@
 				<td><%- acc.uid %></td>
 				<td><%- acc.lgn %></td>
 				<td colspan="4">
-<form id="form-<%- acc.uid %>" action="/admin/update/account/<%- acc.uid %>" method="post" class="pure-form pure-form-stacked">
+<form id="form-<%- acc.uid %>" action="<%= site.url_for('admin/update/account/' + acc.uid) %>" method="post" class="pure-form pure-form-stacked">
     <fieldset>
     <table class="pure-table account-from-table" style='width: 100%;'>
     	<tbody>
