--- a/views/admin/_partial/grade.ejs
+++ b/views/admin/_partial/grade.ejs
@@ -7,7 +7,7 @@
 
 	<div class="pure-g">
 		<div class="pure-u-1-3">
-			<a class="pure-button pure-button-primary" class="pure-u-1-1" href="/admin/new/grade">+ <%= __('New Scores') %></a>
+			<a class="pure-button pure-button-primary" class="pure-u-1-1" href="<%= site.url_for('admin/new/grade') %>">+ <%= __('New Scores') %></a>
 		</div>
 	</div>
 
@@ -34,7 +34,7 @@
 		%>
 		<% for (var i in thead) { %>
 			<th>
-				<a href="/admin/edit/gradettl/<%- thead[i].eid %>" class="custom-mf-title">
+				<a href="<%= site.url_for('admin/edit/gradettl/' + thead[i].eid) %>" class="custom-mf-title">
 					<%- thead[i].ttl %>
 				</a>
 			</th>
@@ -62,9 +62,9 @@
 %>
 <% for (var i in record) { %>
 	<tr>
-		<td><a href="/user/<%- record[i].uid %>"><strong><%- i %></strong></a></td>
+		<td><a href="<%= site.url_for('user/' + record[i].uid) %>"><strong><%- i %></strong></a></td>
 		<td colspan="<%= thead.length+1 %>">
-			<form id="form-<%- record[i].uid %>" action="/admin/update/grade/<%- record[i].uid %>" method="post" class="pure-form pure-form-stacked" style="padding: 0em;">
+			<form id="form-<%- record[i].uid %>" action="<%= site.url_for('admin/update/grade/' + record[i].uid) %>" method="post" class="pure-form pure-form-stacked" style="padding: 0em;">
 			<fieldset style="padding: 0em;">
 				<table class="pure-table" style='width: 100%;'>
 				<tbody>
