--- a/views/admin/_partial/newproblem.ejs
+++ b/views/admin/_partial/newproblem.ejs
@@ -5,7 +5,7 @@
 <div class="content">
 	<%- include('../_partial/widget/nav')%>
 
-<form action="/admin/new/problem" method="post" class="pure-form pure-form-stacked">
+<form action="<%= site.url_for('admin/new/problem') %>" method="post" class="pure-form pure-form-stacked">
     <fieldset>
     <div class="pure-g">
             <div class="pure-u-1-1">
