--- a/views/admin/_partial/problems.ejs
+++ b/views/admin/_partial/problems.ejs
@@ -6,7 +6,7 @@
 	<%- include('../_partial/widget/nav')%>
 	<div class="pure-g">
 		<div class="pure-u-1-3">
-			<a class="pure-button pure-button-primary" class="pure-u-1-1" href="/admin/new/problem">+ <%= __('New Problem') %></a>
+			<a class="pure-button pure-button-primary" class="pure-u-1-1" href="<%= site.url_for('admin/new/problem') %>">+ <%= __('New Problem') %></a>
 		</div>
 	</div>
 
@@ -31,13 +31,13 @@
 					<% } %>
 				</td>
 				<td><%- prob.pid %></td>
-				<td><a href="/problem/0/<%- prob.pid%>"><%- prob.ttl %></a></td>
+				<td><a href="<%= site.url_for('problem/0/' + prob.pid) %>"><%- prob.ttl %></a></td>
 				<td>
 				<span>
-					<a class="" href="/admin/edit/problem/<%- prob.pid%>"><i class="fa fa-cog"></i></a>
+					<a class="" href="<%= site.url_for('admin/edit/problem/' + prob.pid) %>"><i class="fa fa-cog"></i></a>
 				</span> | 
 				<span>
-					<a class="pid-rejudge" href="/admin/api/rejudge?pid=<%- prob.pid %>" title="重測所有上傳程式碼"><i class="fa fa-refresh"></i></a>
+					<a class="pid-rejudge" href="<%= site.url_for('admin/api/rejudge?pid=' + prob.pid) %>" title="重測所有上傳程式碼"><i class="fa fa-refresh"></i></a>
 				</span> |
 				<span>
 					<a class="pid-delete" href="#" title="刪除問題"><i class="fa fa-trash"></i></a>
