--- a/views/_partial/_problem/problem.ejs
+++ b/views/_partial/_problem/problem.ejs
@@ -1,4 +1,4 @@
-<% 
+<%
 	var pid = pinfo.pid,
 		ttl = pinfo.ttl,
 		uid = user["uid"];
@@ -21,7 +21,7 @@
 <% if (user["uid"]) { %>
 	<li class="pure-menu-item"><a class="pure-menu-link" href='<%= site.url_for('submissions?pid=' + pid + '&uid='+ uid) %>'><%= __('My Status') %></a></li>
 <% } %>
-	<li class="pure-menu-item"><a class="pure-menu-link" href='<%= site.url_for('submissions?pid=' + pid) %>'><%= __('Status') %></a></li> 
+	<li class="pure-menu-item"><a class="pure-menu-link" href='<%= site.url_for('submissions?pid=' + pid) %>'><%= __('Status') %></a></li>
 	<li class="pure-menu-item"><a class="pure-menu-link" href='<%= site.url_for('statistic/problem/' + cid + '/' + pid) %>'><%= __('Statistics') %></a></li>
 	<li class="pure-menu-item"><a class="pure-menu-link" href='<%= site.url_for('solution/problem/' + pid) %>'><%= __('Solution') %></a></li>
 <% if (user["uid"] >= 0 && user["class"] == null) { %>
@@ -35,40 +35,63 @@
 <%- problem_content %>
 
 <div class="pure-g">
-	<div class="pure-u-1 pure-u-lg-2-3">
+	<div class="pure-u-1 pure-u-lg-1">
 	<h2 class="content-subhead">Submit</h2>
-<% if( canSubmit ) { %>
-	<form class="pure-form  pure-form-aligned" action="<%= site.url_for('submit') %>" method="post" enctype="multipart/form-data" id="submit_form">
+<% if (canSubmit) { %>
+	<form class="pure-form" action="<%= site.url_for('submit') %>" method="post" enctype="multipart/form-data" id="submit_form">
 		<fieldset>
-		<input name="cid" type="hidden" value="<%- cid %>">
-		<input name="pid" type="hidden" value="<%- pid %>">
-		<% if( psubmit.length === 0 ){ %>
-			<div class="pure-control-group">
-				<label for="lng"><%= __('Programming Language') %></label>
+			<input name="cid" type="hidden" value="<%- cid %>">
+			<input name="pid" type="hidden" value="<%- pid %>">
+		<% if (psubmit.length === 0) { %>
+				<div class="pure-g">
+					<div class="pure-u-1-4">
+						<label for="lng"><%= __('Programming Language') %></label>
+					</div>
+					<div class="pure-u-3-4">
+					<% for (var i = 1 ; i < judge_lng.length; i++) { %>
+						<label for="option-two" class="pure-radio pure-input-1">
+								<input type="radio" name="lng" value="<%- i %>" checked> <%- judge_lng[i] %> (<code><%- judge_compiler_arg[i] %></code>)
+						</label>
+					<% } %>
+					</div>
+				</div>
+				<!--
 				<select name="lng">
 				<% for( var i = 1 ; i < judge_lng.length ; i++ ) { %>
-					<option value="<%- i %>" <%- (i == 1 )?"selected" : "" %>><%- judge_lng[i] %> (<%- judge_compiler_arg[i] %>) </option>
+					<label for="option-two" class="pure-radio">
+							<input id="option-two" type="radio" name="lng" value="<%- i %>" checked>
+							<%- judge_lng[i] %> (<%- judge_compiler_arg[i] %>)
+					</label>
+					<option value="<%- i %>" <%- (i == 1)? "selected" : "" %>><%- judge_lng[i] %> (<%- judge_compiler_arg[i] %>) </option>
 				<% } %>
 				</select>
+			-->
+			<div class="pure-g">
+				<div class="pure-u-1-4">
+					<label for="lng"><%= __('Paste your code ...') %></label>
+				</div>
+				<div class="pure-u-3-4">
+					<textarea class="pure-input-1" maxlength="65536" name="paste_code0" style="font-family: Source Code Pro, Consolas, Monaco, Menlo, Consolas"></textarea>
+				</div>
 			</div>
-
-			<div class="pure-control-group">
-				<label for="lng"><%= __('Source Code') %></label>
-				<input class="pure-input-1-2" name="code0" type="file">
+			<div class="pure-g">
+				<div class="pure-u-1-4">
+					<label for="lng"><%= __('... or upload it') %></label>
+				</div>
+				<div class="pure-u-3-4">
+					<input class="pure-input-1" name="code0" type="file">
+				</div>
 			</div>
-
 		<% } else { %>
 			<% for( var i = 0 ; i < psubmit.length ; i++ ){ %>
 				<div class="pure-control-group">
 					<label for="code<%- i %>"><%- psubmit[i] %></label>
-					<input class="pure-input-1-2" name="code<%- i %>" type="file">
+					<input class="pure-input-1" name="code<%- i %>" type="file">
 				</div>
 			<% } %>
 		<% } %>
-			<div class="pure-controls">
-				<button type="submit" name="submit" id="submit" class="pure-button pure-button-primary"><%= __('Submit') %></button>
-			</div>
 		</fieldset>
+		<button type="submit" name="submit" id="submit" class="pure-button pure-input-1 pure-button-primary"><%= __('Submit') %></button>
 	</form>
 
 	<script>
@@ -76,12 +99,12 @@
 		var answer = confirm("Before you submit, you should make sure that the source code is correct.");
 		if(!answer){ event.preventDefault(); }
 	});
-	</script>	
+	</script>
 <% } else { %>
 	<a class="button-success pure-button" href="<%= site.url_for('login') %>"><i class="fa fa-sign-in"></i> <%= __('Login') %></a>
 <% } %>
 	</div>
-	<div class="pure-u-1 pure-u-lg-1-3">
+	<div class="pure-u-1 pure-u-lg-1">
 		<h2 class="content-subhead">Testdata Set</h2>
 		<a href="<%= site.url_for('testdata/download/' + pid) %>"><i class="fa fa-download"></i> Download Testdata</a>
     	<div class="pure-menu">
