--- a/views/_partial/_user/edit.ejs
+++ b/views/_partial/_user/edit.ejs
@@ -8,52 +8,73 @@
 <h2><div class='sysmsg'><%- sysmsg %></div></h2>
 <% } %>
 
-<form action="<%= site.url_for('edit') %>" method="post" class="pure-form  pure-form-aligned">
-    <fieldset>
-        <legend>Profile</legend>
+<style>
+.comment {
+	text-align: center;
+	font-family: Arial;
+	color: gray;
+	display: block;
+	margin: 15px auto;
+	text-decoration: none;
+	transition: all 0.3s ease;
+	font-size: 12px;
+}
+</style>
+<div class="pure-g">
+	<div class="pure-u-1 pure-u-lg-2-24">
+	</div>
+	<div class="pure-u-1 pure-u-lg-20-24">
 
-        <div class="pure-control-group">
-			<label for="lgn"><%= __('Username') %></label>
-			<input class="pure-input-2-3" type="text" name="lgn" id="lgn" style="opacity: 0.5;" value="<%-  userinfo.info.lgn %>" disabled/>
-		</div>
+	<form action="<%= site.url_for('edit') %>" method="post" class="pure-form  pure-form-aligned">
+	    <fieldset class="pure-group">
+				<label for="lgn"><%= __('Username') %></label>
+				<input class="pure-input-1" type="text" name="lgn" id="lgn" style="opacity: 0.5;" value="<%-  userinfo.info.lgn %>" disabled/>
+				<label for="pwd"><%= __('New Password') %></label>
+				<input class="pure-input-1" type="password" name="pwd" id="pwd" />
+				<label for="repwd"><%= __('Retype New Password') %></label>
+				<input class="pure-input-1" type="password" name="repwd" id="repwd" />
+			</fieldset>
 
-		<div class="pure-control-group">
-			<label for="pwd"><%= __('New Password') %></label>
-			<input class="pure-input-2-3" type="password" name="pwd" id="pwd" />
-		</div>
+			<fieldset class="pure-group">
+				<label for="motto"><%= __('Motto') %></label>
+				<textarea class="pure-input-1" name="motto" id="motto"><%- userinfo.info.motto %></textarea>
+			</fieldset>
+	    <button type="submit" name="submit" id="submit" class="pure-button pure-input-1 pure-button-primary"><%= __('Submit') %></button>
+	</form>
+	</div>
+	<div class="pure-u-1 pure-u-lg-2-24">
+	</div>
+</div>
 
-		<div class="pure-control-group">
-			<label for="repwd"><%= __('Retype New Password') %></label>
-			<input class="pure-input-2-3" type="password" name="repwd" id="repwd" />
-		</div>
+<div class="pure-g">
+	<div class="pure-u-1 pure-u-lg-2-24">
+	</div>
+	<div class="pure-u-1 pure-u-lg-20-24">
+		<form action="<%= site.url_for('user/upload/avatar') %>" method="post" class="pure-form pure-form-stacked" enctype="multipart/form-data">
+		    <fieldset>
+		        <legend>Avatar</legend>
+						<div class="pure-g">
+		            <div class="pure-u-1">
+									<img class="pure-u-1" src="<%= site.url_for('images/avatar/thumb--' + user['uid']) %>" onerror="this.src='http://i.imgur.com/mV053DI.png'"/>
+								</div>
 
-		<div class="pure-control-group">
-			<label for"motto><%= __('Motto') %></label>
-			<textarea class="pure-input-2-3" name="motto" id="motto"><%- userinfo.info.motto %></textarea>
-		</div>
+							<div class="pure-u-1-4">
+								<label for="avatar">Select Image</label>
+							</div>
+							<div class="pure-u-3-4">
+								<input class="pure-input-1" name="avatar" type="file" accept="application/x-zip-compressed,image/*">
+							</div>
+						</div>
+					<div class="pure-u-1 pure-u-md-1-1">
+						<button type="submit" name="submit" class="pure-button pure-input-1 pure-button-primary"><%= __('Upload Avatar') %></button>
+					</div>
+				</div>
+		    </fieldset>
+		</form>
 
-		<div class="pure-controls">
-        	<button type="submit" name="submit" id="submit" class="pure-button pure-button-primary"><%= __('Submit') %></button>
-        </div>
-    </fieldset>
-</form>
-
-<form action="<%= site.url_for('user/upload/avatar') %>" method="post" class="pure-form pure-form-stacked" enctype="multipart/form-data">
-    <fieldset>
-        <legend>Avatar</legend>
-		<div class="pure-g">
-            <div class="pure-u-1 pure-u-md-11-24">
-				<img class="pure-u-1-1" src="<%= site.url_for('images/avatar/thumb--' + user['uid']) %>" onerror="this.src='http://i.imgur.com/mV053DI.png'"/>
-			</div>
-			<div class="pure-u-1 pure-u-md-1-24">
-			</div>
-			<div class="pure-u-1 pure-u-md-11-24">
-				<label for="avatar">Select Image File</label>
-				<input class="pure-input-2-3" name="avatar" type="file" accept="application/x-zip-compressed,image/*">
-				<button type="submit" name="submit" class="pure-button pure-button-primary"><%= __('Upload Avatar') %></button>
-			</div>
-		</div>
-    </fieldset>
-</form>
+	</div>
+	<div class="pure-u-1 pure-u-lg-2-24">
+	</div>
+</div>
 
 </div>
