--- a/views/_partial/_user/login.ejs
+++ b/views/_partial/_user/login.ejs
@@ -1,27 +1,46 @@
 <div class="header">
-	<h1 class='article-title'>Login</h1>
+	<h1 class='article-title'><%= __('Login') %></h1>
 	<h2>If you have any login problem, please contact TA.</h2>
 </div>
 <div class="content">
 <% if (sysmsg && sysmsg.length > 0) { %>
 	<div class='sysmsg'><%- sysmsg %></div>
 <% } %>
-<form class="pure-form pure-form-aligned" action="login" method="post" style="float: center;">
-    <fieldset>
-        <legend>Login</legend>
-        <div class="pure-control-group">
-        	<label for="lgn"><%= __('Username') %></label>
-			<input class="pure-input-1-2" type="text" name="lgn" id="lgn" placeholder="B049123456"/>
-		</div>
+<style>
+.comment {
+	text-align: center;
+	font-family: Arial;
+	color: gray;
+	display: block;
+	margin: 15px auto;
+	text-decoration: none;
+	transition: all 0.3s ease;
+	font-size: 12px;
+}
+</style>
+<div class="pure-g">
+	<div class="pure-u-1 pure-u-lg-6-24">
+	</div>
+	<div class="pure-u-1 pure-u-lg-12-24">
+		<form class="pure-form" action="login" method="post" style="">
+		    <fieldset class="pure-group">
+						<label for="lgn"><%= __('Username') %></label>
+						<input class="pure-input-1" type="text" name="lgn" id="lgn" placeholder="<%= __('Enter your student ID') %>" />
+				</fieldset>
 
-		<div class="pure-control-group">
-        	<label for="pwd"><%= __('Passward') %></label>
-			<input class="pure-input-1-2" type="password" name="pwd" id="pwd" />
-		</div>
+				<fieldset class="pure-group">
+						<label for="lgn"><%= __('Password') %></label>
+						<input class="pure-input-1" type="password" name="pwd" id="pwd" placeholder="<%= __('Password') %>" />
+				</fieldset>
 
-		<div class="pure-controls">
-        	<button type="submit" name="submit" id="submit" class="pure-button pure-button-primary"><%= __('Login') %></button>
+				<button type="submit" name="submit" id="submit" class="pure-button pure-input-1 pure-button-primary"><%= __('Login') %></button>
+				<div class="pure-controls">
+					<a href="https://www.facebook.com/ntucsiec2014xiaominglin/" class="comment"><%= __('Forgot password?') %></a>
+					<a href="https://www.facebook.com/ntucsiec2014xiaominglin/" class="comment"><%= __('Create an account.') %></a>
         </div>
-    </fieldset>
-</form>
+		    </fieldset>
+		</form>
+	</div>
+	<div class="pure-u-1 pure-u-lg-6-24">
+	</div>
 </div>
