--- a/views/_partial/_user/register.ejs
+++ b/views/_partial/_user/register.ejs
@@ -1,48 +1,50 @@
-<article class='article article-type-post'>
-	<div class='article-meta'></div>
-	<div class='article-inner'>
-		<header class='article-header'>
-			<h1 class='article-title'>Register</h1>
-		</header>
-		<div class='article-entry'>
-			<h1><%- sysmsg %></h1>
-			<form action="register" method="post" class="form-style-7" style="text-align: center">
-				<ul>
-				<li>
-					<label for="lgn">學號</label>
-					<input type="text" name="lgn" id="lgn" maxlength="16"/>
-					<span>Example. R0412345</span>
-				</li>
-				<li>
-					<label for="pwd">密碼</label>
-					<input type="password" name="pwd" id="pwd"/>
-					<span>Enter your password</span>
-				</li>
-				<li>
-					<label for="pwd2">重複輸入密碼</label>
-					<input type="password" name="pwd2" id="pwd2" />
-					<span>Repeat your password</span>
-				</li>
-				<li>
-					<label for="nname">真實姓名</label>
-					<input type="text" name="nname" id="nname"/>
-					<span>Example. 王大明</span>
-				</li>
-				<li>
-					<label for="email">郵件信箱地址</label>
-					<input type="text" name="email" id="email"/>
-					<span>Example. example@gmail.com</span>
-				</li>
-				<li>
-					<label for="code">註冊碼</label>
-					<input type="text" name="code" id="code"/>
-					<span>Example. xxxxx</span>
-				</li>
-				<li>
-					<input type="submit" name="submit" id="submit" value="註冊" />
-				</li>
-				<ul>
-			</form>
-		</div>
+<div class="header">
+	<h1 class='article-title'>Register</h1>
+	<h2>If you have any login problem, please contact TA.</h2>
+</div>
+<% if (sysmsg && sysmsg.length > 0) { %>
+	<div class='sysmsg'><%- sysmsg %></div>
+<% } %>
+<style>
+.comment {
+	text-align: center;
+	font-family: Arial;
+	color: gray;
+	display: block;
+	margin: 15px auto;
+	text-decoration: none;
+	transition: all 0.3s ease;
+	font-size: 12px;
+}
+</style>
+<div class="content">
+<div class="pure-g">
+	<div class="pure-u-1 pure-u-lg-6-24">
 	</div>
-</article>
+	<div class="pure-u-1 pure-u-lg-12-24">
+		<form action="<%= site.url_for('register') %>" method="post" class="pure-form">
+				<fieldset class="pure-group">
+						<label for="lgn"><%= __('Username') %></label>
+						<input class="pure-input-1" type="text" name="lgn" id="lgn" placeholder="<%= __('Enter your student ID') %>" />
+						<label for="lgn"><%= __('Password') %></label>
+						<input class="pure-input-1" type="password" name="pwd" id="pwd" placeholder="<%= __('Password') %>" />
+						<input class="pure-input-1" type="password" name="pwd2" id="pwd2" placeholder="<%= __('Retype your password') %>" />
+				</fieldset>
+
+				<fieldset class="pure-group">
+						<label for="lgn"><%= __('Email') %></label>
+						<input class="pure-input-1" name="email" id="email" placeholder="" />
+						<label for="lgn"><%= __('Register Key') %></label>
+						<input class="pure-input-1" name="code" id="code" placeholder="" />
+				</fieldset>
+
+		    <button type="submit" name="submit" id="submit" class="pure-button pure-input-1 pure-button-primary"><%= __('Submit') %></button>
+
+				<div class="pure-controls">
+					<a href="https://www.facebook.com/ntucsiec2014xiaominglin/" class="comment"><%= __('You donot have register key?') %></a>
+				</div>
+		</form>
+	</div>
+	<div class="pure-u-1 pure-u-lg-6-24">
+	</div>
+</div>
